updates to support choosing a file root reducing memory usage in split generation